--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=receitas
 
-spring.datasource.url=jdbc:mysql://localhost:3306/recipes_db?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=bcd127
+spring.datasource.url=jdbc:mysql://192.168.1.101:3306/recipes_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=celso
+spring.datasource.password=1234
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
