--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=receitas
 
-spring.datasource.url=jdbc:mysql://192.168.1.101:3306/recipes_db?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=celso
+spring.datasource.url=jdbc:mysql://localhost:3306/recipes_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=1234
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
